force-app/main/default/objects/Candidate__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Please Enter Your Address</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>