force-app/main/default/objects/Candidate__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>