force-app/main/default/objects/Candidate__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Please enter your Date of birth</description>
    <label>DOB</label>
    <type>Date</type>
</CustomField>