force-app/main/default/objects/Candidate__c/fields/Fixed_Salary__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Salary__c</fullName>
    <description>Please Enter Your Fixed Pay</description>
    <label>Fixed Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>