force-app/main/default/objects/Candidate__c/fields/Fresher__c.field-meta.xml
<CustomField>
    <fullName>Fresher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fresher?</label>
    <type>Checkbox</type>
</CustomField>