force-app/main/default/objects/Candidate__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Please Enter Your Phone Number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>