force-app/main/default/objects/Candidate__c/fields/Variable_Salary__c.field-meta.xml
<CustomField>
    <fullName>Variable_Salary__c</fullName>
    <description>Please Enter Your Variable Pay</description>
    <label>Variable Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>