force-app/main/default/objects/Candidate__c/fields/Year_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Experience__c</fullName>
    <description>Please Enter Year of experience</description>
    <label>Year of Experience</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>