force-app/main/default/objects/Candidate__c/recordTypes/Offshore_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Offshore_Candidate</fullName>
    <active>true</active>
    <label>Offshore Candidate</label>
</RecordType>