force-app/main/default/objects/Candidate__c/recordTypes/Onshore_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Onshore_Candidate</fullName>
    <active>true</active>
    <label>Onshore Candidate</label>
</RecordType>